tests/machine/x/go/group_items_iteration.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/group_items_iteration.go:15:21: data.Group is not a type
../../../tests/machine/x/go/group_items_iteration.go:16:30: data.Group is not a type
../../../tests/machine/x/go/group_items_iteration.go:23:15: data.Group is not a type
../../../tests/machine/x/go/group_items_iteration.go:29:19: data.Group is not a type

1: //go:build ignore
